--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<name>my-app</name>
 	<url>http://maven.apache.org</url>	
 	<dependencies>
-		<dependency>
+		<dependency
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
